--- a/public/src/cyberfiles.css
+++ b/public/src/cyberfiles.css
@@ -176,7 +176,7 @@ br {
 }
 
 #topbar.shadow {
-    box-shadow: 0px -17px 15px 14px rgba(0,0,0,0.7);
+    box-shadow: 0px -17px 15px 14px var(--topbarShadow);
 }
 
 #topbarTitle {
@@ -498,7 +498,7 @@ br {
     transition: 0.1s ease-in-out;
     z-index: 22;
     /* pointer-events: none; */
-    box-shadow: 0px -17px 15px 14px rgba(0,0,0,0.7);
+    box-shadow: 0px -17px 15px 14px var(--previewTopbarShadow);
 }
 
 .previewTopbarButton {
