--- a/public/src/cyberfiles.css
+++ b/public/src/cyberfiles.css
@@ -425,6 +425,8 @@ br {
     font-size: 14px;
     cursor: default;
     text-decoration: none !important;
+    /* content-visibility: auto;
+    contain-intrinsic-size: 40px; */
     /* transition: 0.05s ease-in-out; */
 }
 
@@ -468,6 +470,10 @@ br {
 
 .fileEntryMobileDetails {
     color: var(--fileDateMobile);
+}
+
+#fileListLoading {
+    margin-bottom: -30px;
 }
 
 #fileListHint {
@@ -1054,18 +1060,25 @@ br {
 
 /* Custom scrollabrs */
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
+    background: var(--bgScrollbarTrack);
 }
 ::-webkit-scrollbar-thumb {
     background: var(--scrollbar);
-    border-radius: 4px;
+    border-radius: 100px;
+    background-clip: padding-box;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-thumb:hover {
     background: var(--scrollbarH);
+    background-clip: padding-box;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-thumb:active {
     background: var(--scrollbarC);
+    background-clip: padding-box;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 * { scrollbar-width: thin; }
     
