--- a/public/src/cyberfiles.css
+++ b/public/src/cyberfiles.css
@@ -102,7 +102,7 @@ pre:not(#textPreviewPre) {
     overflow-y: hidden;
 }
 pre:not(#textPreviewPre)::-webkit-scrollbar {
-    height: 5px;
+    border-radius: 0px 0px 8px 8px;
 }
 pre:not(#textPreviewPre):last-child {
     margin-bottom: 0px;
@@ -1083,17 +1083,17 @@ br {
     background: var(--scrollbar);
     border-radius: 100px;
     background-clip: padding-box;
-    border: 3px solid rgba(0, 0, 0, 0);
+    border: 6px solid rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-thumb:hover {
     background: var(--scrollbarH);
     background-clip: padding-box;
-    border: 3px solid rgba(0, 0, 0, 0);
+    border: 4px solid rgba(0, 0, 0, 0);
 }
 ::-webkit-scrollbar-thumb:active {
     background: var(--scrollbarC);
     background-clip: padding-box;
-    border: 3px solid rgba(0, 0, 0, 0);
+    border: 4px solid rgba(0, 0, 0, 0);
 }
 * { scrollbar-width: thin; }
     
